--- a/css/styles.css
+++ b/css/styles.css
@@ -3,10 +3,11 @@
   --title-text-color: #212121;
   --accent-color: #2196f3;
   --primary-white-color: #ffffff;
-  --footer-contacts-color: rgba(255, 255, 255, 0, 6);
+  --footer-contacts-color: rgba(255, 255, 255, 0.6);
   --logo-color: #000000;
   --background-color: #2f303a;
   --light-background-color: #f5f4fa;
+  --hero-button-focus-bg-color: #188ce8;
 }
 body {
   font-family: Roboto, sans-serif;
@@ -62,12 +63,14 @@ ul {
 }
 /* Hero */
 .hero {
-  color: var(--primary-white-color);
   background-color: var(--background-color);
+  text-align: center;
+}
+.hero > h1 {
+  color: var(--primary-white-color);
   font-weight: 900;
   font-size: 44px;
   line-height: 1.36;
-  text-align: center;
   letter-spacing: 0.06em;
   text-transform: uppercase;
 }
@@ -77,14 +80,18 @@ ul {
   font-weight: bold;
   font-size: 16px;
   line-height: 1.87;
-  align-items: center;
-  text-align: center;
   letter-spacing: 0.06em;
   cursor: pointer;
 }
+.hero-button:hover,
+.hero-button:focus {
+  background-color: var(--hero-button-focus-bg-color);
+}
+
 /* Секция преимуществ */
 .list-title {
   color: var(--title-text-color);
+  font-size: 14px;
   font-weight: bold;
   line-height: 1.14;
   text-transform: uppercase;
@@ -124,6 +131,7 @@ footer {
 .footer-contacts {
   color: var(--footer-contacts-color);
   font-style: normal;
+  text-decoration: none;
 }
 .footer-contacts:focus,
 .footer-contacts:hover {
